force-app/main/default/objects/ItemDeContenedorDePedido__c/fields/ContenedorDePedido__c.field-meta.xml
<CustomField>
    <fullName>ContenedorDePedido__c</fullName>
    <label>Contenedor de Pedido</label>
    <referenceTo>ContenedorDePedido__c</referenceTo>
    <relationshipLabel>Items de Contenedor de Pedido</relationshipLabel>
    <relationshipName>ItemsDeContenedorDePedido</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>