force-app/main/default/objects/ItemDeContenedorDePedido__c/fields/NumeroDeCajas__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeCajas__c</fullName>
    <label>Número de cajas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>