force-app/main/default/objects/ItemDeContenedorDePedido__c/fields/PedidoLineItem__c.field-meta.xml
<CustomField>
    <fullName>PedidoLineItem__c</fullName>
    <label>Pedido Line Item</label>
    <referenceTo>PedidoLineItem__c</referenceTo>
    <relationshipLabel>Items de Contenedor de Pedido</relationshipLabel>
    <relationshipName>ItemsDeContenedorDePedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>